--- a/app/package.json
+++ b/app/package.json
@@ -14,5 +14,8 @@
     "less-middleware": "~2.2.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.2"
   }
 }
