--- a/app/package.json
+++ b/app/package.json
@@ -16,9 +16,11 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "mocha": "^3.1.2"
+    "mocha": "^3.1.2",
+    "mocha-jenkins-reporter": "0.3.1"
   },
 "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test-jenkins": "JUNIT_REPORT_PATH=/report.xml mocha --colors --reporter mocha-jenkins-reporter"
   }  
 }
